# VC-Practica3

app/: build.gradle.kts
app/src/androidTest/java/ups/edu/aplicacionnativa/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: descriptores.csv
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/ups/edu/aplicacionnativa/: DescriptorResult.java  DrawingView.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  dialog_reporte.xml
app/src/main/res/values/: strings.xml
app/src/test/java/ups/edu/aplicacionnativa/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
